[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/slide/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://src/demo_collection/slide/icon_color.png" type="Texture" id=3]
[ext_resource path="res://addons/awesome_splash/text_node/AweListTextNode.gd" type="Script" id=4]
[ext_resource path="res://addons/awesome_splash/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/awesome_splash/text_node/AweTextNode.gd" type="Script" id=6]
[ext_resource path="res://addons/awesome_splash/assets/font/RobotoCondensed-Light.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 230
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 7 )

[node name="SplashSlide" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.941176, 0.941176, 0.941176, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="TitleNode" type="Node2D" parent="AspectNode"]
modulate = Color( 0.219608, 0.223529, 0.227451, 1 )
script = ExtResource( 4 )
font = SubResource( 1 )
anchor = Vector2( 0.5, 0.5 )
char_anchor = Vector2( 0.5, 0.5 )

[node name="InfoNode" type="Node2D" parent="AspectNode"]
modulate = Color( 0.384314, 0.388235, 0.4, 1 )
position = Vector2( 300, 300 )
script = ExtResource( 6 )
anchor = Vector2( 0.5, 0.5 )
font = SubResource( 2 )

[node name="Logo" type="Node2D" parent="AspectNode"]

[node name="Texture" type="TextureRect" parent="AspectNode/Logo"]
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[editable path="AspectNode"]
